<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_number_of_times">Number of Times</string>
    <string name="habit_start_date">Start Date</string>
    <string name="habit_date">0000-00-00</string>
    <string name="action_insert_dummy_data">Insrt Dummy Data</string>
</resources>
